Вернул в .screenrc caption.

--- a/.screenrc
+++ b/.screenrc
@@ -15,6 +15,7 @@ bind K kill
 bind I login on
 bind O login off
 bind } history
+caption always "%{= dw}%-w%{=b .B}%n %t%{-}%+w"
 term "screen-256color"
 attrcolor b ".I"
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
