--- a/.screenrc
+++ b/.screenrc
@@ -17,17 +17,13 @@ bind O login off
 bind } history
 caption always "%{= dw}%-w%{=b .B}%n %t%{-}%+w"
 term "screen-256color"
-attrcolor b ".I"
-termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
-defbce on
 defnonblock 5
 bind c screen 1
 bind ^c screen 1
 bind 0 select 10                                                            
 screen 1
-#screen -t Run         1   bash -c "cd ~/Sources/ && bash"
-#screen -t Commands   2   bash -c "cd ~/Sources/ && bash"
-#screen -t Git        3   bash -c "cd ~/Sources/ && bash"
-#screen -t Mc         4   bash -c "mc"
-#screen -t Other      5   bash -c "cd ~/Sources/ && bash"
-#screen -t Ssh        6   bash -c "cd ~ && bash"
+attrcolor b ".I" 
+# Tell screen how to set colors. AB = background, AF=foreground 
+termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm' 
+# Erase background with current bg color.  Not needed if TERM=screen-256color 
+defbce "on" 
