--- a/.gitmodules
+++ b/.gitmodules
@@ -17,17 +17,20 @@
 	path = .vim/bundle/jedi-vim
 	url = git://github.com/davidhalter/jedi-vim.git
 [submodule ".vim/bundle/supertab"]
-        path = .vim/bundle/supertab
-        url = git://github.com/ervandew/supertab.git
+	path = .vim/bundle/supertab
+	url = git://github.com/ervandew/supertab.git
 [submodule ".vim/bundle/tagbar"]
-        path = .vim/bundle/tagbar
-        url = git://github.com/majutsushi/tagbar.git
+	path = .vim/bundle/tagbar
+	url = git://github.com/majutsushi/tagbar.git
 [submodule ".vim/bundle/vim-flake8"]
-        path = .vim/bundle/vim-flake8 
-        url = git://github.com/nvie/vim-flake8.git
+	path = .vim/bundle/vim-flake8
+	url = git://github.com/nvie/vim-flake8.git
 [submodule ".vim/bundle/vim-jinja"]
-        path = .vim/bundle/vim-jinja
-        url = git://github.com/lepture/vim-jinja.git
+	path = .vim/bundle/vim-jinja
+	url = git://github.com/lepture/vim-jinja.git
 [submodule ".vim/bundle/vim-virtualenv"]
-        path = .vim/bundle/vim-virtualenv 
-        url = git://github.com/jmcantrell/vim-virtualenv.git
+	path = .vim/bundle/vim-virtualenv
+	url = git://github.com/jmcantrell/vim-virtualenv.git
+[submodule ".vim/bundle/grep.vim"]
+	path = .vim/bundle/grep.vim
+	url = git@github.com:vim-scripts/grep.vim.git
