--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,49 +1,21 @@
-# MAIN SETTINGS
+set -g default-terminal "screen-256color"
+set -g utf8
+setw -g mode-keys vi
 set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not) 
 set-option -g base-index 1
 set -g history-limit 4096
 set -g visual-activity off
 set -g visual-bell off
-
-# STATUSBAR
 set -g display-time 2000
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-right '' 
-
-# COLORS
+set -g status-right ''
 set -g status-bg default
 set -g status-fg white
-
-# KEYS
-#unbind C-b
-#unbind l
-set -g prefix C-a
-bind C-a send-prefix
-bind-key C-a last-window
-
-# OPTIONS
+set -g status-justify centre
 set-option -g status-utf8 on
 set-window-option -g utf8 on
-set-option -g mouse-select-pane on
-
 set-window-option -g automatic-rename on # auto name
 setw -g mode-mouse on
-
-setw -g mode-keys vi
-
-bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
-bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
-
-bind r source-file ~/.tmux.conf
-
-# RUN
-new -n Run "cd ~/Sources/ && bash"
-neww -n Commands "cd ~/Sources/ && bash"
-neww -n Db "cd ~/Sources/ && bash"
-neww -n Git "cd ~/Sources/ && bash"
-#neww -n Mc "cd ~/Sources && mc"
-neww -n Other "cd ~ && bash"
-selectw -t 1 
-
+set -g mode-mouse on
+setw -g mouse-select-pane on
+setw -g mouse-resize-pane on
+setw -g mouse-select-window on
